VenueRequest @NonNull added. Fix pom.xml resources issue. Readme.md